# docs/swagger.json
@@ -89,6 +89,53 @@
                 }
             }
         },
+        "/app/add": {
+            "post": {
+                "description": "获取租户详细信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "租户接口"
+                ],
+                "summary": "获取租户详细信息",
+                "operationId": "/app/add",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AddAppInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.AddAppOutput"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/app/detail": {
             "get": {
                 "description": "获取租户详细信息",
@@ -103,6 +150,14 @@
                 ],
                 "summary": "获取租户详细信息",
                 "operationId": "/app/detail",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "success",
@@ -173,6 +228,53 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/dto.GetAppListOutput"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/app/update": {
+            "post": {
+                "description": "删除租户",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "租户接口"
+                ],
+                "summary": "删除租户",
+                "operationId": "/app/update",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.DeleteAppInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.DeleteAppOutput"
                                         }
                                     }
                                 }
@@ -689,6 +791,26 @@
         }
     },
     "definitions": {
+        "dto.AddAppInput": {
+            "type": "object",
+            "properties": {
+                "app_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "qpd": {
+                    "type": "integer"
+                },
+                "qps": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.AddAppOutput": {
+            "type": "object"
+        },
         "dto.AddGrpcServiceInput": {
             "type": "object",
             "required": [
@@ -1004,6 +1126,12 @@
                 }
             }
         },
+        "dto.DeleteAppInput": {
+            "type": "object"
+        },
+        "dto.DeleteAppOutput": {
+            "type": "object"
+        },
         "dto.DeleteServiceInput": {
             "type": "object",
             "required": [
@@ -1017,7 +1145,15 @@
             }
         },
         "dto.GetAppDetailInput": {
-            "type": "object"
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
         },
         "dto.GetAppDetailOutput": {
             "type": "object"
@@ -1337,6 +1473,12 @@
                     "type": "integer"
                 }
             }
+        },
+        "dto.UpdateAppInput": {
+            "type": "object"
+        },
+        "dto.UpdateAppOutput": {
+            "type": "object"
         },
         "dto.UpdateGrpcServiceInput": {
             "type": "object",
